#  if USE_AALIB
#  AALIB_DIR = aalib
#  endif

if cairo_dep.found()
  subdir('cairo')
endif

#  if USE_FLAC
#  FLAC_DIR = flac
#  endif
#  
#  if USE_GDK_PIXBUF
#  GDK_PIXBUF_DIR = gdk_pixbuf
#  endif
#  
#  if USE_JACK
#  JACK_DIR=jack
#  endif
#  
#  if USE_JPEG
#  JPEG_DIR = jpeg
#  endif
#  
#  if USE_LIBCACA
#  LIBCACA_DIR = libcaca
#  endif
#  
#  if USE_LIBDV
#  LIBDV_DIR = dv
#  endif
#  
#  if USE_LIBPNG
#  LIBPNG_DIR = libpng
#  endif
#  
#  if USE_DV1394
#  DV1394_DIR = raw1394
#  endif
#  
#  if USE_PULSE
#  PULSE_DIR = pulse
#  endif
#  
#  
#  if USE_SHOUT2
#  SHOUT2_DIR = shout2
#  endif
#  
#  if USE_SOUP
#  SOUP_DIR=soup
#  endif
#  
#  if USE_SPEEX
#  SPEEX_DIR = speex
#  endif
#  
#  if USE_TAGLIB
#  TAGLIB_DIR = taglib
#  endif
#  
#  if USE_VPX
#  VPX_DIR=vpx
#  endif
#  
#  if USE_WAVPACK
#  WAVPACK_DIR=wavpack
#  endif
