#  if USE_AALIB
#  AALIB_DIR = aalib
#  endif

if cairo_dep.found()
  subdir('cairo')
endif

if flac_dep.found()
  subdir('flac')
endif

if gdkpixbuf_dep.found()
   subdir('gdk_pixbuf')
endif

#  if USE_JACK
#  JACK_DIR=jack
#  endif
#  
if jpeglib.found()
  subdir('jpeg')
endif

#  
#  if USE_LIBCACA
#  LIBCACA_DIR = libcaca
#  endif
#  
#  if USE_LIBDV
#  LIBDV_DIR = dv
#  endif

if libpng_dep.found()
  subdir('libpng')
endif

#  if USE_DV1394
#  DV1394_DIR = raw1394
#  endif

if libpulse_dep.found()
  subdir('pulse')
endif

#  
#  if USE_SHOUT2
#  SHOUT2_DIR = shout2
#  endif

if libsoup_dep.found()
  subdir('soup')
endif

#  if USE_SPEEX
#  SPEEX_DIR = speex
#  endif
#  
#  if USE_TAGLIB
#  TAGLIB_DIR = taglib
#  endif

if vpx_dep.found()
  subdir('vpx')
endif

#  if USE_WAVPACK
#  WAVPACK_DIR=wavpack
#  endif
