gstalpha = library('gstalpha', 'gstalpha.c',
  c_args : core_args,
  include_directories : core_incs,
  dependencies : [gstvideo_dep, gst_dep]
)

gstalphacolor = library('gstalphacolor', 'gstalphacolor.c',
  c_args : core_args,
  include_directories : core_incs,
  dependencies : [gstvideo_dep, gst_dep]
)
